[tool.poetry]
name = "django-lan"
version = "0.0.1"
description = "A Django plugin to manage Local Area Networks"
authors = ["Starling Associates <info@starling.associates>"]
license = "Apache-2.0"
homepage = "https://www.djangolan.com"
repository = "https://github.com/starling-cloud/django-lan"
documentation = "https://www.djangolan.com/docs"
packages = [
    { include = "django_lan", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^22.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Homepage" = "https://www.djangolan.com"
"Repository" = "https://github.com/starling-cloud/django-lan"
"Documentation" = "https://www.djangolan.com/docs"
"Tracker" = "https://github.com/starling-cloud/django-lan/issues"

[tool.black]
line-length = 79