# -*- coding: utf-8 -*-


# =============================================================================
# Project Configuration
# =============================================================================

[tool.poetry]
name = "django-lan"
version = "0.0.1"
description = "A Django plugin to manage Local Area Networks"
authors = ["Starling Associates <info@starling.associates>"]
license = "Apache-2.0"
homepage = "https://www.djangolan.com"
repository = "https://github.com/starling-cloud/django-lan"
documentation = "https://www.djangolan.com/docs"
packages = [{ include = "django_lan", from = "src" }]


# =============================================================================
# Dependencies
# =============================================================================

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
Django = "^5.1"

# =============================================================================
# Development Dependencies
# =============================================================================

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"     # Framework for testing
pytest-cov = "^6.0.0" # Code coverage for tests
black = "^24.8.0"     # Code formatter
flake8 = "^7.1.0"     # Linter for code quality
mypy = "^1.14.1"      # Static type checker
sphinx = "^8.0.2"     # Documentation generator
isort = "^5.10.1"     # Import sorter
tox = "^4.24.1"       # Testing multiple environments
pre-commit = "^4.0.1" # Pre-commit hooks for linting and formatting


# =============================================================================
# Build System
# =============================================================================

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Homepage" = "https://www.djangolan.com"
"Repository" = "https://github.com/starling-cloud/django-lan"
"Documentation" = "https://www.djangolan.com/docs"
"Tracker" = "https://github.com/starling-cloud/django-lan/issues"

[tool.black]
line-length = 79
